--- a/3월 3주차/3월 17일.MD
+++ b/3월 3주차/3월 17일.MD
@@ -38,7 +38,11 @@ Thread
 
 ### I/O 연습
 - 스트림은 연결할 수 있다.
-- close() 로 닫아줘야
+- close() 로 닫아줘야함
+
+## 스트림 연결출력
+
+### 스트림-1
 ```java
 package 스트림연결출력;
 
@@ -60,8 +64,11 @@ public class IO1_inputStream {
 			int c;
 			while((c=in.read()) != -1) {
 				
-				System.out.println((char)c);
+				System.out.print((char)c);
 			}
+			System.out.println();
+			System.out.println("인코딩 문자집합: "+ in.getEncoding());
+			
 			// 아래 두개는 try문 안에다가 적기
 			fis.close();
 			in.close();
@@ -72,9 +79,86 @@ public class IO1_inputStream {
 		
 	}
 }
+
 ```
 
-I/O 
+### 스트림 -2
+```java
+package 스트림연결출력;
+
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class IO2_InputStream {
+	public static void main(String[] args) {
+		
+		
+	// 실습	
+		// c:\\Windows\\system.ini 읽어서 출력해보기
+		// FileInputStream과 InputStreamReader 활용
+		
+		FileInputStream fis = null;
+		InputStreamReader in = null;
+		
+		try {
+			fis = new FileInputStream("C:\\Windows\\system.ini");
+			in = new InputStreamReader(fis, "utf-8");
+			
+			int c;
+			while((c=in.read()) != -1) {
+				
+				System.out.print((char)c);
+			}
+			
+			
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+		
+		
+	}
+}
+```
+
+### 스트림-3
+```java
+package 스트림연결출력;
+
+import java.io.FileInputStream;
+import java.io.IOException;
+
+public class IO3_InputStream {
+	public static void main(String[] args) {
+		
+		FileInputStream fis;
+		
+		try {
+			fis = new FileInputStream("./file/file2.txt");
+			byte[] bs = new byte[8];
+			
+			int i;
+			
+			while((i=fis.read(bs)) != -1) {
+				
+				for(byte b: bs) {
+					System.out.print((char)b);
+				}
+				
+				System.out.print(": " + i + "바이트 읽음");
+				
+			}
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		System.out.println("end");
+	}
+}
+
+```
+
+### 스트림-4
 ```java
 package 스트림연결출력;
 
@@ -134,7 +218,49 @@ public class IO4_OutputStream {
 }
 ```
 
-I/O write, read
+### 스트림-5
+```java
+package 스트림연결출력;
+
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class IO5_OutputStream {
+	public static void main(String[] args) throws IOException {
+		
+		FileOutputStream fout = new FileOutputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file6.txt");
+		
+		int[] num = {1,4,6,-1,50};
+		byte b[] = {7,51,3,4,1,24};
+		
+		// int배열 저장
+		for(int i=0; i<num.length; i++) {
+			fout.write(num[i]);
+		}
+		// byte배열 저장
+		for(int i=0; i<b.length;i++) {
+			fout.write(b);       // 바이너리로 저장하면 사람이 읽을수 없다.
+		}
+		fout.close();
+		
+		// 읽어오기
+		FileInputStream fin = new FileInputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file6.txt");
+		
+		InputStreamReader fr = new InputStreamReader(fin, "utf-8");
+		
+		int c;
+		
+		while((c=fr.read()) != -1) {
+			System.out.print(c);
+		}
+	}
+}
+```
+
+### 스트림-6
 ```java
 package 스트림연결출력;
 
@@ -180,7 +306,285 @@ public class IO6_OutputStream {
 }
 ```
 
-I/O copy
+### 스트림-7
+```java
+package 스트림연결출력;
+
+import java.io.BufferedOutputStream;
+import java.io.BufferedReader;
+import java.io.FileReader;
+import java.io.IOException;
+
+public class IO7_BufferedOutput {
+	public static void main(String[] args) {
+		
+		try {
+			// 버퍼이용 읽기
+			FileReader fin = new FileReader("C:\\Windows\\System.ini");
+			BufferedReader in = new BufferedReader(fin);
+			
+			// 출력
+			BufferedOutputStream out = new BufferedOutputStream(System.out,20);
+			
+			// 읽어오기
+			int c;
+			while((c=in.read()) != -1) {
+				out.write((char)c);
+			}
+			in.close();
+			
+		} catch (IOException e) {
+			
+		}
+		
+	}
+}
+
+```
+
+### 스트림-8
+```java
+package 스트림연결출력;
+
+import java.io.BufferedOutputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+
+public class IO8_BufferedINOUT {
+	public static void main(String[] args) {
+		
+		// 스트림생성
+		System.out.println("키보드로 입력해 주세요>>");
+		InputStreamReader in = new InputStreamReader(System.in);
+		BufferedOutputStream out = new BufferedOutputStream(System.out,5);
+		
+		try {
+			int c;
+			while((c=in.read()) != -1) {
+				out.write(c);
+			}
+			in.close();
+			out.close();
+		} catch (IOException e) {
+			System.out.println("데이터를 받아 출력하는데 문제가 있습니다.");
+		}
+	}
+}
+```
+
+## 표준 입출력
+
+### 표준-1
+```java
+package 표준입출력;
+
+import java.io.IOException;
+
+/*
+	1. 스트림이란 ? 
+		- 컴퓨터공학에서 연속적인 데이터흐름 또는 데이터를 전송하는 소프트웨어 모듈을 말한다.
+		- 스트림은 도착한 순서대로 데이터를 흘려보낸다.
+		- 자바에서의 입출력 스트림은 응용프로그램과 입출력장치를 연결하는 소프트웨어 모듈이다.
+		
+	2. 특징
+		. 단방향
+		. 선입선출(FIFO)
+		. 기본단위 1바이트 > 문자 2바이트
+		. 스트림끼리 서로 연결할 수 있다.
+		
+	3. 구분
+		1) 입력이냐 출력이냐?
+			- 입력 : Input 또는 Reader
+			- 출력 : Output 또는 Writer
+		2) 바이트탸 문자냐?
+			- 바이트 스트림 : ~~~Stream
+			- 문자스트림     : ~~~Reader, Writer
+		3) 기반 / 보조?
+			- 기반 : File
+			- 보조 : 그외
+			
+	4. 입출력처리 예외
+		. FileNotFoundException
+		. IOException
+		. ClassNotFoundException
+		
+	5. 구현
+		. try ~ catch문 안에서 입출력처리
+		. 스트림은 닫아야 한다. close()
+
+*/
+public class Standard1 {
+	public static void main(String[] args) {
+		System.out.println("숫자1, 영어A, 한글 가 입력해보자'");
+		
+		int i;
+		try {
+			i = System.in.read();
+			System.out.println(i); // 아스키 숫자
+			System.out.println((char)i);
+			
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+	}
+}
+```
+
+### 표준-2
+```java
+package 표준입출력;
+
+import java.io.IOException;
+
+public class Standard2 {
+	public static void main(String[] args) {
+		
+		System.out.println("알파벳을 여러개 쓰고 [Enter]를 누른다");
+		
+		int i;
+		try {
+			while((i=System.in.read()) != -1 ) { // -1 : reade() 다 읽으면
+				
+				System.out.println(i + ":");
+				System.out.println((char)i);
+				System.out.println();	// Enter : 10 13으로 출력된다.
+			}
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+	}
+}
+```
+
+### 표준-3
+```java
+package 표준입출력;
+
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.util.Scanner;
+
+public class Standard3 {
+	public static void main(String[] args) {
+		
+		try {
+			FileInputStream fio 
+			= new FileInputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file1.txt");
+		
+			// 스캐너와 연결
+			Scanner sc = new Scanner(fio);
+			
+			String str = sc.next();
+			System.out.print(str);
+		}
+		catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+		
+	}
+}
+
+```
+
+## 한글입출력
+
+### 한글-1
+```java
+package 한글입출력;
+
+import java.io.FileReader;
+import java.io.IOException;
+
+public class IO1_FileReader {
+	public static void main(String[] args) {
+		
+		FileReader in = null;
+		try {
+			in = new FileReader("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file8.txt");
+			int c;
+			while((c=in.read()) != -1) {
+				System.out.print((char)c);
+			}
+			in.close();
+			
+			
+		} catch (IOException e) {
+			System.out.println("데이터 읽어오기에 실패하였습니다.");
+		}
+		
+	}
+}
+```
+
+### 한글-2
+```java
+package 한글입출력;
+
+import java.io.FileWriter;
+import java.io.IOException;
+
+public class IO2_FileWriter {
+	public static void main(String[] args) {
+		
+		FileWriter fout = null;
+		
+		try {
+			fout = new FileWriter("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\file9.txt");
+			fout.write("파일에 저장해 봅니다");
+			fout.write("버퍼를 활용 저장해 봅니다.");
+			char[] buf = {'A', 'B', 'C', 'D'};
+			fout.write(buf);
+			fout.close();
+			System.out.println("데이터 저장이 완료되었습니다.");
+			
+		} catch (IOException e) {
+			System.out.println("데이터 쓰기에 실패하였습니다.");
+		}
+	}
+}
+```
+
+## 활용
+
+### 활용-1
+```java
+package 활용;
+
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+public class CopyReadWrite {
+	public static void main(String[] args) {
+		
+		File src = new File("");
+		File dest = new File("");
+		
+		try {
+			FileInputStream fi = new FileInputStream(src);
+			FileOutputStream fo = new FileOutputStream(dest);
+			byte[] buf = new byte[1024*10];
+			while(true) {
+				int n = fi.read(buf);
+				fo.write(buf, 0, n);
+				if(n<buf.length) break;
+			}
+			fi.close();
+			fo.close();
+			System.out.println(src.getPath() + "->" + dest.getPath());
+			
+		} catch (IOException e) {
+			System.out.println("파일 복사오류");
+		}
+		
+	}
+}
+```
+
+### 활용-2
 ```java
 package 활용;
 
@@ -211,11 +615,57 @@ public class CopyTextFile {
 		}
 	}
 }
-
 ```
 
-I/O
-ObjectStream 이용
+### 활용-3
+```java
+package 활용;
+
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.util.Scanner;
+
+public class ImageCopy {
+	public static void main(String[] args) {
+		
+		// 이미지 파일 .png 넣어보기
+		
+		File src = new File("");
+		File dest = new File("");
+		
+		int c;
+		try {
+			FileInputStream fi = new FileInputStream(src);
+			FileOutputStream fo = new FileOutputStream(dest);
+			
+			System.out.println("이미지를 복사하시겠습니까?");
+			Scanner sc = new Scanner(System.in);
+			String ans = sc.next();
+			if(ans.equals("y")) {
+				while((c=fi.read()) != -1) {
+					fo.write((byte)c);
+				}
+				fi.close();
+				fo.close();
+			}
+			System.out.println("원본: " + src.getPath());
+			System.out.println("사본: " + dest.getPath());
+			System.out.println("복사가 완료되었습니다.");
+			
+		} catch (IOException e) {
+			System.out.println("파일 복사 오류가 있습니다.");
+		}
+		
+	}
+
+}
+```
+
+## Serialization
+
+### serial-1
 ```java
 package Serialization;
 
@@ -257,7 +707,7 @@ class Person implements Serializable {
 }
 
 public class S1_Serialization {
-	public static void main(String[] args) throws ClassNotFoundException {
+	public static void main(String[] args) 	throws ClassNotFoundException {
 		
 		Person park = new Person("가나다", "의사");
 		Person kim = new Person("마마마", "검사");
@@ -284,6 +734,7 @@ public class S1_Serialization {
 		}
 		
 		//**********************************************************
+		// 역직렬화
 		try {
 			FileInputStream fis = new FileInputStream("C:\\Users\\1\\Desktop\\"
 					+ "Directory-Hoony\\file\\serialization1.out");
@@ -308,7 +759,7 @@ public class S1_Serialization {
 }
 ```
 
-I/O ObjectStream 이용 연습
+### serial-2
 ```java
 package Serialization;
 
@@ -395,10 +846,168 @@ public class S2_Serialization {
 }
 ```
 
+### serial-3
+```java
+package Serialization;
+
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.Serializable;
+
+class Person2 implements Serializable {
+
+	private static final long serialVersionUID = 1L;
+	
+	private String name;
+	private int age;
+	private String address;
+	
+	public Person2() {}
+	public Person2(String name, int age, String address) {
+		this.name = name;
+		this.age = age;
+		this.address = address;
+	}
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	public int getAge() {
+		return age;
+	}
+	public void setAge(int age) {
+		this.age = age;
+	}
+	public String getAddress() {
+		return address;
+	}
+	public void setAddress(String address) {
+		this.address = address;
+	}
+}
+
+class PersonArr implements Serializable {
+
+	private static final long serialVersionUID = 1L;
+	Person2[] arr;
+	public PersonArr() {
+		arr = new Person2[5];
+	}
+}
 
 
+public class S3_Serialization {
+	public static void main(String[] args) throws ClassNotFoundException {
+		
+		Person2 p1 = new Person2();
+		p1.setName("홍길동");
+		p1.setAge(20);
+		p1.setAddress("한양시");
+		
+		Person2 p2 = new Person2("슈퍼맨", 25, "부산시");
+		Person2 p3 = new Person2("배트맨", 30, "고담");
+		Person2 p4 = new Person2("스파이더맨", 20, "뉴욕");
+		Person2 p5 = new Person2("앤트멘", 50, "땅속");
+		
+		PersonArr p = new PersonArr();
+		p.arr[0] = p1;
+		p.arr[1] = p2;
+		p.arr[2] = p3;
+		p.arr[3] = p4;
+		p.arr[4] = p5;
+		
+		try {
+			
+			// 스트링생성
+			FileOutputStream fio = new FileOutputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\serialization3.out",false);
+			ObjectOutputStream obj = new ObjectOutputStream(fio);
+			
+			// 쓰기
+			obj.writeObject(p);
+			obj.close();
+			
+			System.out.println("정상적으로 직렬화 되었습니다.");
+			
+		} catch (IOException e) {
+			System.out.println("직렬화중 오류가 발생되었습니다.");
+		}
+		
+		// 역직렬화
+		
+		try {
+			FileInputStream fi = new FileInputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\serialization3.out");
+			
+			ObjectInputStream ojs = new ObjectInputStream(fi);
+			
+			Person2 pp = (Person2)ojs.readObject();
+			
+			System.out.println(pp.getName());
+			System.out.println(pp.getAge());
+			System.out.println(pp.getAddress());
+			
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+		
+	}
+}
+```
 
+### serial-4
+```java
+package Serialization;
 
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+
+public class S4_Serialization {
+	public static void main(String[] args) throws ClassNotFoundException {
+		
+		try {
+			FileInputStream fin = new FileInputStream("C:\\Users\\1\\Desktop\\Directory-Hoony\\file\\serialization3.out");
+			ObjectInputStream objin = new ObjectInputStream(fin);
+			
+			PersonArr pa = (PersonArr)objin.readObject();
+			
+			for(int i=0;i<pa.arr.length;i++) {
+				if(pa.arr[i] == null) {
+					break;
+				} else {
+					System.out.println(pa.arr[i].getName());
+					System.out.println(pa.arr[i].getAge());
+					System.out.println(pa.arr[i].getAddress());
+					System.out.println("*************************");
+				}
+			}
+			System.out.println("출력이 완료되었습니다.");
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		
+	}
+}
+```
+
+----------------------------------------------------------------------------------------------------------------
+
+```
+p.644 확인문제
+
+1. 파일의 목록 보기
+2. 파일 선택시 그 파일의 내용을 보기 ( 문자내용을 볼 수 있게 만들기 )
+3. 선택시 파일의 내용을 키보드로 입력해서 그 내용 수정할 수 있게 만들기
+4. 파일 삭제하기
+5. 파일 저장 ( 새롭게 만들어서 저장하기 )
+6. 종료
+
+```
 
 
 
