--- a/3월 3주차/3월 17일.MD
+++ b/3월 3주차/3월 17일.MD
@@ -995,17 +995,289 @@ public class S4_Serialization {
 }
 ```
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ----------------------------------------------------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ```
 p.644 확인문제
 
-1. 파일의 목록 보기
-2. 파일 선택시 그 파일의 내용을 보기 ( 문자내용을 볼 수 있게 만들기 )
-3. 선택시 파일의 내용을 키보드로 입력해서 그 내용 수정할 수 있게 만들기
-4. 파일 삭제하기
-5. 파일 저장 ( 새롭게 만들어서 저장하기 )
+1. 학생의 목록 보기
+2. 학 선택시 그 파일의 내용을 보기 ( 문자내용을 볼 수 있게 만들기 )
+3. 선택시 파일의 내용을 키보드로 입력해서 그 내용 수정할 수 있게 만들기, 처음부터 다시 입력
+4. 파일 삭제하기 ( 삭제할 내역의 파일 주소를 넣어주세요 )
+5. 파일 생성 및 저장 ( 새롭게 만들어서 저장하기 )
 6. 종료
+
+```
+
+Arraylist에서 힌트얻기
+```java
+package collection;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Scanner;
+
+class Name {
+	private String name;
+
+	public String getName() {
+		return name;
+	}
+
+	public void setName(String name) {
+		this.name = name;
+	}
+}
+
+class Re {
+	Name n = new Name();
+	
+	Name register() {
+		System.out.println("이름을 입력해주세요.");
+		n.setName(ArrayList_실습2.sc.next());
+		return n;
+	}
+	
+}
+
+
+public class ArrayList_실습2 {
+	static Scanner sc = new Scanner(System.in); 
+	static ArrayList<Name> file  = new ArrayList<>();
+	
+	// 이름 객체 추가
+	public static void insert(Name n) {
+		file.add(n);
+	}
+	
+	public static void main(String[] args) {
+		// 1. 스캐너로 이름을 받는다.
+		// 2. ArrayList 또는 Vector의 저장한다.
+		// 3. 가장 긴이름을 찾아 출력한다.
+		
+		String answer;
+		String result = "";
+		String result1 = "";
+		
+		while(true) {
+			Re re = new Re();
+			Name name = re.register();
+			insert(name);
+
+			System.out.println("계속하시겠습니까? (y/n)");
+			answer = sc.next();
+			if(answer.equals("n")) {
+				System.out.println("***입력 종료 갑 출력***");
+				break;
+			}
+		}
+		
+		Name[] st = new Name[file.size()];
+		
+		for(int i=0;i<file.size();i++) {				
+			st[i] = file.get(i);
+		}
+		
+		for(int i=0;i<st.length;i++) {	
+			result = st[i].getName();
+			
+			if (result1.length() < result.length()) {
+				result1 = result;
+			}
+		}
+		
+		System.out.println(result1);
+	}
+}
+```
+
+
+### 다음 arrayList
+
+```java
+package collection;
+
+import java.util.ArrayList;
+import java.util.Scanner;
+import java.util.Vector;
+
+
+class Student {
+	private String name;
+	private String tel;
+	private String address;
+	
+	
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	public String getTel() {
+		return tel;
+	}
+	public void setTel(String tel) {
+		this.tel = tel;
+	}
+	public String getAddress() {
+		return address;
+	}
+	public void setAddress(String address) {
+		this.address = address;
+	}
+	
+}
+
+class Register {
+	Student p = new Student();
+	
+	// 등록하기() - 입력받아서 객체를 반환
+	Student registering() {
+		System.out.println("학생을 등록합니다. 자료를 입력해주세요*****");
+		System.out.println("이름>>");
+		p.setName(ArrayList_실습1.sc.next());
+		System.out.println("연락처>>");
+		p.setTel(ArrayList_실습1.sc.next());
+		System.out.println("주소>>");
+		p.setAddress(ArrayList_실습1.sc.next());
+		
+		return p;
+		
+	}
+	
+}
+
+
+
+// 학생객체생성 클래스
+public class ArrayList_실습1 {
+	
+	static ArrayList<Student> file = new ArrayList<Student>(); 
+	static Scanner sc = new Scanner(System.in);
+	
+	// ArrayList에 학생객체를 추가하기
+	public static void insert(Student st) {
+		file.add(st);
+	}
+	
+	// ArrayList에서 조회하기
+	public static void read(String name) {
+		for(int i=0; i<file.size(); i++) {
+			if(name.equals(file.get(i).getName())) {
+				System.out.println("학생을 찾았습니다...");
+				System.out.println(file.get(i).getName());
+				System.out.println(file.get(i).getTel());
+				System.out.println(file.get(i).getAddress());
+			} else {
+				System.out.println("찾는 학생이 존재하지 않습니다.");
+			}
+		}
+		
+		
+		
+	}
+	
+	// ArrayList에서 등록하기
+	public static void main(String[] args) {
+		
+		System.out.println("학생관리 프로그램을 시작합니다.....");
+		String answer;
+		
+		while(true) {
+			System.out.println("메뉴를 선택해 주세요(1:학생등록, 2:학생검색, 3:종료)");
+			int menu = sc.nextInt();
+			
+			switch(menu) {
+			case 1:
+				while(true) {
+					Register res = new Register();
+					Student st = res.registering();
+					insert(st);
+					
+					System.out.println("계속하시겠습니까? (y/n)");
+					answer = sc.next();
+					if(answer.equals("n")) {
+						System.out.println("학생 등록을 종료합니다.");
+						break;
+					}
+					
+				}
+				break;
+			case 2:
+				while(true) {
+					System.out.println("검색할 학생이름을 입력하세요>>");
+					String name = sc.next();
+					read(name);
+					
+					System.out.println("학생 검색을 계속하시겠습니까?(y/n)");
+					answer = sc.next();
+					if(answer.equals("n")) {
+						break;
+					}
+				}
+			case 3: break;
+			}
+			System.out.println("업무를 계속하시겠습니까?(y/n)");
+			answer = sc.next();
+			if(answer.equals("n")) {
+				sc.close();
+				break;
+			}
+		}
+		System.out.println("프로그램을 종료합니다...");
+	}
+}
 
 ```
 
@@ -1015,6 +1287,257 @@ p.644 확인문제
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+----------------------------------------------------------------------------------------------------
+
+
+
+
+
+# 지금까지 한것!!!
+
+### 학생쪽
+```java
+package ex;
+
+import java.util.ArrayList;
+import java.util.Scanner;
+
+public class Student {
+	
+	private String name;
+	private int age;
+
+	
+	Student() {}
+	
+	Student(String name) {
+		this.name = name;
+	}
+	
+	Student(String name, int age, String address) {
+		this.name = name;
+		this.age = age;
+	}
+
+	public String getName() {
+		return name;
+	}
+
+	public void setName(String name) {
+		this.name = name;
+	}
+
+	public int getAge() {
+		return age;
+	}
+
+	public void setAge(int age) {
+		this.age = age;
+	}
+}
+
+class Register {
+	Student s = new Student();
+	
+	Student register() {
+		System.out.println("학생을 등록합니다. 자료입력해주세요**");
+		System.out.println("이름>>");
+		s.setName(RegisterList.sc.next());
+		System.out.println("나이>>");
+		s.setAge(RegisterList.sc.nextInt());
+		
+		return s;
+	}
+}
+
+class RegisterList {
+	
+	// 저장할곳
+	static ArrayList<Student> file = new ArrayList<Student>();
+	static Scanner sc = new Scanner(System.in);
+	
+	public static void insert(Student s) {
+		file.add(s);
+	}
+	
+	public static void insertSerial() {
+		
+	}
+	
+	// 등록하기
+	
+	public static void re() {
+		
+
+		
+		while(true) {
+			Register res = new Register();
+			Student st = res.register();
+			insert(st);
+			
+
+			System.out.println(" 더 저장하시겠습니까? (y/n)");
+			String answer = sc.next();
+			if(answer.equals("n")) {
+				System.out.println("학생 등록을 종료합니다.");
+				break;
+			}
+		}
+	}
+	
+	public static void read() {
+		
+		if(file.size() == 0) {
+			System.out.println("학생이 등록되지 않았습니다. 등록해주세요.");
+			return;
+		}
+		
+		for(int i=0; i<file.size(); i++) {
+			
+			System.out.println("이름: " +file.get(i).getName());
+			System.out.println("나이: " +file.get(i).getAge());
+			System.out.println();
+		}
+	}
+	
+	public static void detail() {
+		
+		if(file.size() == 0) {
+			System.out.println("학생이 등록되지 않았습니다. 등록해주세요.");
+			return;
+		}
+		
+		while(true) {
+			for(int i=0; i<file.size(); i++) {
+				System.out.println("찾으시는 학생의 이름을 적어주세요.");
+				String answer = sc.next();
+				if(answer.equals(file.get(i).getName())) {
+					System.out.println("이름: " +file.get(i).getName());
+					System.out.println("나이: " +file.get(i).getAge());
+					
+					System.out.println(" 더 찾으시겠습니까? (y/n)");
+					answer = sc.next();
+					if(answer.equals("n")) {
+						System.out.println("학생 찾기를 종료합니다.");
+						return;
+					}
+				} else {
+					System.out.println("해당하는 학생이 존재하지 않습니다.");
+					System.out.println("초기화면으로 돌아갑니다.");
+					return;
+				}
+			}
+		}	
+	}
+	
+	public static void fix() {
+		if(file.size() == 0) {
+			System.out.println("학생이 등록되지 않았습니다. 등록해주세요.");
+			return;
+		}
+		
+		while(true) {
+			for(int i=0;i<file.size();i++) {
+				System.out.println("수정하실 학생의 이름을 입력해주세요.");
+				String answer = sc.next();
+				int choice = sc.nextInt();
+				if(answer.equals(file.get(i).getName())) {
+					System.out.println(file.get(i).getName() + "의 " + "**이름을 수정하시려면 1, 나이를 수정하시려면2"
+							+ "를 입력해주세요**");
+					choice = sc.nextInt();
+					if(choice)
+					
+				}
+
+			}
+		}
+	}
+	
+	public static void remove() {
+		System.out.println("삭제하고싶은 학생의 이름을 입력해주세요.");
+	}
+}
+
+
+```
+
+
+### 본파일
+```java
+package ex;
+
+import java.util.Scanner;
+
+// 교육생의 이름, 나이, 주소를 저장하려고 한다.
+
+public class Ex1 {
+	public static void main(String[] args) {
+		
+		Scanner sc = new Scanner(System.in);
+		RegisterList r = new RegisterList();
+		boolean exit = false;
+		
+		do {
+			System.out.println(
+					"-------------------------------------------------\n"
+							+ "1.목록보기|2.상세보기|3.수정하기|4.삭제하기|5.학생 생성 및 저장|6.종료\n"
+							+ "-------------------------------------------------\n"
+							+ "선택>>"
+					);
+			int menu = sc.nextInt();
+			switch (menu) {
+			case  1:
+				System.out.println("**목록보기를 누르셨습니다**");
+				System.out.println("**전체 학생을 조회합니다**");
+				r.read();		
+				break;
+			case 2:
+				System.out.println("**상세보기를 누르셨습니다**");
+				r.detail();
+				
+				break;
+			case 3:
+				System.out.println("**수정하기를 누르셨습니다*");
+				r.fix();
+				break;
+			case 4:
+				System.out.println("**삭제하기를 누르셨습니다**");
+				break;
+			case 5:
+				System.out.println("**학생 생성 및 저장을 누르셨습니다.");
+				r.re();
+				break;
+				
+			case 6:
+				System.out.println("**종료하기를 누르셨습니다.");
+				System.out.println("**수고하셨습니다**");
+				exit = true;
+				break;
+			default:
+				System.out.println("잘못누르셨습니다. 다시 입력해주세요.");
+				break;
+			}
+			
+			
+		}while(!exit);
+		
+		
+	}
+}
+
+```
 
 
 
