--- a/3월 3주차/3월 17일.MD
+++ b/3월 3주차/3월 17일.MD
@@ -1543,5 +1543,298 @@ public class Ex1 {
 
 
 
+--------- 코드 만든것
+- 1)
+- ㅇ
+- ㅇ
+- ㅇ
+- ㅇ
+- ㅇ
+- ㅇ
 
 
+~~~java
+import java.util.ArrayList;
+import java.util.Scanner;
+
+public class Student {
+    private String name;
+    private int age;
+
+
+    Student() {}
+
+    Student(String name) {
+        this.name = name;
+    }
+
+    Student(String name, int age, String address) {
+        this.name = name;
+        this.age = age;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+}
+
+class Register {
+    Student s = new Student();
+
+    Student register() {
+        System.out.println("학생을 등록합니다. 자료입력해주세요**");
+        System.out.println("이름>>");
+        s.setName(RegisterList.sc.next());
+        System.out.println("나이>>");
+        s.setAge(RegisterList.sc.nextInt());
+
+        return s;
+    }
+}
+
+class RegisterList {
+    // 저장할곳
+    static ArrayList<Student> file = new ArrayList<Student>();
+    static Scanner sc = new Scanner(System.in);
+
+    public static void insert(Student s) {
+        file.add(s);
+    }
+
+    public static void insertSerial() {
+
+    }
+
+    // 등록하기
+
+    public static void re() {
+
+
+        while (true) {
+            Register res = new Register();
+            Student st = res.register();
+            insert(st);
+
+
+            System.out.println(" 더 저장하시겠습니까? (y/n)");
+            String answer = sc.next();
+            if (answer.equals("n")) {
+                System.out.println("학생 등록을 종료합니다.");
+                break;
+            }
+        }
+    }
+
+    public static void read() {
+
+        if (file.size() == 0) {
+            System.out.println("학생이 등록되지 않았습니다. 등록해주세요.");
+            return;
+        }
+
+        for (int i = 0; i < file.size(); i++) {
+
+            System.out.println("이름: " + file.get(i).getName());
+            System.out.println("나이: " + file.get(i).getAge());
+            System.out.println();
+        }
+    }
+
+    public static void detail() {
+
+        if (file.size() == 0) {
+            System.out.println("학생이 등록되지 않았습니다. 등록해주세요.");
+            return;
+        }
+
+        while (true) {
+            String st = "";
+            int stAge = 0;
+            System.out.println("찾으시는 학생의 이름을 적어주세요.");
+            String answer = sc.next();
+            for (int i = 0; i < file.size(); i++) {
+                if (answer.equals(file.get(i).getName())) {
+                    st = file.get(i).getName();
+                    stAge = file.get(i).getAge();
+                }
+            }
+
+            if (st == "" || stAge == 0) {
+                System.out.println("해당하는 학생이 존재하지 않습니다. 초기 화면으로 돌아갑니다.");
+                break;
+            }
+
+            System.out.println("이름: " + st);
+            System.out.println("나이: " + stAge);
+            System.out.println();
+            System.out.println("더 찾으시겠습니까? (y/n)");
+            answer = sc.next();
+            if (answer.equals("n")) {
+                System.out.println("학생 찾기를 종료합니다.");
+                break;
+            }
+        }
+    }
+
+    public static void fix() {
+        if (file.size() == 0) {
+            System.out.println("학생이 등록되지 않았습니다. 등록해주세요.");
+            return;
+        }
+
+        while (true) {
+            String st = "";
+            int stAge = 0;
+
+            String afterSt = "";
+            int afterAge = 0;
+
+            System.out.println("수정하실 학생의 이름을 입력해주세요.");
+            String answer = sc.next();
+
+            for (int i = 0; i < file.size(); i++) {
+                if (answer.equals(file.get(i).getName())) {
+                    st = file.get(i).getName();
+                    stAge = file.get(i).getAge();
+
+                }
+            }
+
+            System.out.println("** " + st + "의 " + " 이름을 수정하시려면 1, 나이를 수정하시려면 2"
+                    + "를 입력해주세요**");
+
+            int choice = sc.nextInt();
+
+            if (choice == 1) {
+                System.out.println(st + "의 이름을 수정하실 이름으로 적어주세요.");
+                answer = sc.next();
+
+                for (int i = 0; i < file.size(); i++) {
+                    if (st.equals(file.get(i).getName())) {
+                        file.get(i).setName(answer);
+                        afterSt = file.get(i).getName();
+                    }
+                }
+                System.out.println(st + "의 이름이 " + afterSt + "로 변경되었습니다.");
+            } else if (choice == 2) {
+                System.out.println(st + "의 나이를 수정할 나이로 적어주세요 ex) 10");
+                int an = sc.nextInt();
+
+                for (int i = 0; i < file.size(); i++) {
+                    if(st.equals(file.get(i).getName())) {
+                        file.get(i).setAge(an);
+                        afterAge = file.get(i).getAge();
+                    }
+                }
+                System.out.println(st + "의 나이가 " + st + "살에서 " + afterAge + "살로 변경되었습니다.");
+
+            }
+            System.out.println("더 수정하시겠습니까? (y/n)");
+            answer = sc.next();
+            if (answer.equals("n")) {
+                break;
+            }
+        }
+    }
+    public static void remove() {
+        if (file.size() == 0) {
+            System.out.println("학생이 등록되지 않았습니다. 등록해주세요.");
+            return;
+        }
+
+        while(true) {
+            String st = "";
+
+            System.out.println("삭제하고싶은 학생의 이름을 입력해주세요.");
+            String answer = sc.next();
+
+            for(int i=0;i<file.size();i++) {
+                if(answer.equals(file.get(i).getName())) {
+                    file.remove(i);
+                }
+            }
+            System.out.println(answer +  "의 내용이 삭제되었습니다.");
+
+            System.out.println("더 삭제하시겠습니까? (y/n)");
+            answer = sc.next();
+            if (answer.equals("n")) {
+                break;
+            }
+        }
+
+
+    }
+}
+
+
+~~~
+
+- main
+~~~java
+import java.util.Scanner;
+
+public class Main {
+    public static void main(String[] args) {
+        Scanner sc = new Scanner(System.in);
+        RegisterList r = new RegisterList();
+        boolean exit = false;
+
+        do {
+            System.out.println(
+                    "-------------------------------------------------\n"
+                            + "1.목록보기|2.상세보기|3.수정하기|4.삭제하기|5.학생 생성 및 저장|6.종료\n"
+                            + "-------------------------------------------------\n"
+                            + "선택>>"
+            );
+            int menu = sc.nextInt();
+            switch (menu) {
+                case  1:
+                    System.out.println("**목록보기를 누르셨습니다**");
+                    System.out.println("**전체 학생을 조회합니다**");
+                    r.read();
+                    break;
+                case 2:
+                    System.out.println("**상세보기를 누르셨습니다**");
+                    r.detail();
+
+                    break;
+                case 3:
+                    System.out.println("**수정하기를 누르셨습니다*");
+                    r.fix();
+                    break;
+                case 4:
+                    System.out.println("**삭제하기를 누르셨습니다**");
+                    r.remove();
+                    break;
+                case 5:
+                    System.out.println("**학생 생성 및 저장을 누르셨습니다.");
+                    r.re();
+                    break;
+
+                case 6:
+                    System.out.println("**종료하기를 누르셨습니다.");
+                    System.out.println("**수고하셨습니다**");
+                    exit = true;
+                    break;
+                default:
+                    System.out.println("잘못누르셨습니다. 다시 입력해주세요.");
+                    break;
+            }
+
+
+        }while(!exit);
+    }
+}
+~~~
