--- a/3월 4주차/3월 20일.MD
+++ b/3월 4주차/3월 20일.MD
@@ -1,8 +1,32 @@
 # Review
-Thread
-- 생성방법 : Thread클래스, Runnable 인터페이스
+입출력
+- FileInputStream / FileOutputStream : 1바이트로 처리한다, 주로 이미지, 동영상에서 활용된다.
+- FileInputReader / FileOutputWriter : 2바이트로 처리한다, 문자에 활용한다.
+- try ~ catch문 안에 처리해야 한다.
+- true : 이어쓰기, false 덮어쓰기 옵션이다.
+- 읽기 : read()-을 반복한다.
+- 쓰기 : wrtie()
+
+직렬화
+- 어느 시점의 객체를 출력(저장 네트워크 전송)하는 것
+- Serializable 인터페이스를 implement 해야 한다.
+- 가져오기 : FileInputStream + ObjectInputStream
+- 내보내기 : FileOutputStream + ObjectOutputStream
+
+- 여러 개의 객체를 저장하려면, Vector나 ArrayList 속에 넣어서
+- Vector나 ArrayList를 포함하는 클래스를 만들고 그 클래스를 저장하면 된다.
 
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) ***입출력***을 이해하고 구현할 수 있다.
+1) ***직렬화***를 활용한 CRUD(Create, Reader, Update, Delete) 구현 실습
+2) ***화면설계***를 이해하고 개인별 작성한다. (이번주 완성 목표)
+3) 제출일시: ~ 3/27(월). cabine747@naver.com
+4) Database와 연결하기 위한 CRUD 기능에 대한 화면을 포함 작성할 것
+
+## 포트폴리오
+- 내용들은 카톡 캡처한거랑 역시 중요한건 만들면서 어떠한 생각을 했는지가 잘 들어가야 한다.
+
+
+
+
