--- a/3월 4주차/3월 21일.MD
+++ b/3월 4주차/3월 21일.MD
@@ -1,13 +1,21 @@
 # Review
-입출력
-- FileInputStream / FileOutputStream : 1바이트로 처리한다, 주로 이미지, 동영상에서 활용된다.
-
+CRUD 구현
+- Goods 이용 ( Create, Read, Update, Delete )
 
 
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) ***직렬화***를 활용한 CRUD(Create, Reader, Update, Delete) 구현 실습
+1) HTML 기본태그를 활용할 수 있다.
 
-## 포트폴리오
-- 내용들은 카톡 캡처한거랑 역시 중요한건 만들면서 어떠한 생각을 했는지가 잘 들어가야 한다.
+## 포트폴리오 실습(PM) 화면설계 작성, 3월 27일 (월)
+- Datebase와 연결하기 위한 CRUD기능에 대한 화면을 포함 작성할것 정하기
+
+------------------------------------------------------------------------------------------------------------------------------
+
+- 정적 웹 : 고정된 정보처리
+- 동적 웹: 가공처리해야 할 정보처
+
+### HTML5
+- 웹 문서 작성을 위한 HTML 태그 셋, 웹 애플리케이션 작성을 위한 API
+- 웹 폼, 오디오, 캔버스, svg, 웹 스토리지, 웹 SQL 데이터베이스, 파일 입출력, 앱 워커, 위치정보 
