--- a/3월 4주차/3월 21일.MD
+++ b/3월 4주차/3월 21일.MD
@@ -11,6 +11,8 @@ CRUD 구현
 ## 포트폴리오 실습(PM) 화면설계 작성, 3월 27일 (월)
 - Datebase와 연결하기 위한 CRUD기능에 대한 화면을 포함 작성할것 정하기
 
+보통 오전에는 수업, 오후에는 실습을 할 예정 ( 유동적으로 )
+
 ------------------------------------------------------------------------------------------------------------------------------
 
 - 정적 웹 : 고정된 정보처리
@@ -19,3 +21,111 @@ CRUD 구현
 ### HTML5
 - 웹 문서 작성을 위한 HTML 태그 셋, 웹 애플리케이션 작성을 위한 API
 - 웹 폼, 오디오, 캔버스, svg, 웹 스토리지, 웹 SQL 데이터베이스, 파일 입출력, 앱 워커, 위치정보 
+
+
+```
+<!-- 
+	HTML기본문법
+		. 대소문자를 구분하지않는다. > HTML, Html, html
+		. 인용부호도 상관없다.	   > "웹문서", '웹문서', 웹문서
+		. 문자열에 공란이 포함되어 있다면 반드시 인용부호를 써줘야 한다.
+			"웹 문서" 
+			
+		. 시작태그와 종료태그로 구성된다.
+			<시작>	</종료>
+			<태그>	
+			<태그/>
+			
+		. 속성
+			<시작 속성명=속성값 속석명 = 속성값 > </종료>
+		. 내용
+		 	<시작> 내용(content, innerHTML) </종료>
+		 	
+	태그 와 요소(Element)
+		. 태그 : 태그명
+		. 요소 : <시작> 내용 </종료>
+		
+	태그의 대분류
+		. 블록(block)태그
+			- p, h1, div, ul 등
+			- 항상 새로운 라인에서 시작한다 - 한줄을 차지한다
+			- 줄바꿈이 되는것이다. br이 불필요
+			- 너비와 높이 설정할 수 있다.
+			
+		. 인라인(inline)태그	
+			- span, em, img, a, strong...등
+			- 라인속의 한 부분을 차지한다. 
+			- 줄바꿈 안됨. br이 필요
+			- 너비와 높이 설정이 불가능하다.
+			
+		. Meta태그
+			; head에 작성하는 태그
+			- meta태그
+				. name = ""  content = ""
+				> charset = "utf-8"
+				> name = "author"	content="홍길동"
+				> name = "description"	content="설명내용"
+				> name = "keywords" content="자장면,오뎅,,,"
+			
+			- base태그
+				; 페이지에서 사용할 url의 중복을 피하기 위해 공통된 앞까지 설정
+				<base href="http://www/mysite.com/score">
+				<a href="math.html">
+			
+			- link태그
+				; 외부파일을 이 문서로 가져와서 사용할때
+				
+			- title태그
+				; 문서의 제목 / 태그 위에 마우스가 올라갔을때 팁을 주는 문구출력
+				
+			- style태그 :	꾸밈
+				; css를 지정하기 위한 태그
+				
+			- scrpit태그 : 기능
+				; javascript를 지정하기 위한 태그
+ -->
+```
+
+
+### html 시인글 (줄바꿈 연습)
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+			<h1>행	복</h1>
+						<h3>한용운</h3>
+	<hr>
+	<div>
+						
+	나는 당신을 사랑하고 당신의 행복을 사랑합니다.<br>
+	나는 온 세상 사람들이 당신을 사랑하고<br>
+	당신의 행복을 사랑하기를 바랍니다.<br><br>
+	
+	그러나 정말로 당신을 사랑하는 사람이 있다면<br>
+	나는 그 사람을 미워하겠습니다.<br>
+	
+	그 사람을 미워하는 것은 당신을 사랑하는 마음의 한 부분입니다.<br>
+	그러므로 그 사람을 미워하는 고통도 나에게는 행복입니다.<br><br>
+	
+	만일 온 세상 사람이 당신을 미워한다면<br>
+	나는 그 사람을 얼마나 미워하겠습니까?<br><br>
+	
+	만일 온 세상 사람이 당신을 사랑하지 않고<br>
+	미워하지도 않는다면<br>
+	그것은 나의 일생에 견딜 수 없는 불행입니다.<br><br>
+	
+	만일 온 세상 사람이 당신을 사랑하고자 하여<br>
+	나를 미워한다면 나의 행복은 더 클 수가 업습니다.<br><br>
+	
+	그것은 모든 사람이 나를 미워하는 원한의 두만강이 깊을수록<br>
+	나의 당신을 사랑하는 행복의 백두산이 높아지는 까닭입니다.<br>
+	</div>
+		
+</body>
+</html>
+```
+
