--- a/3월 4주차/3월 21일.MD
+++ b/3월 4주차/3월 21일.MD
@@ -95,12 +95,11 @@ CRUD 구현
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<body>
+<body leftmargin="50" align="center">
 			<h1>행	복</h1>
-						<h3>한용운</h3>
+						<h3 align="right">한용운</h3>
 	<hr>
-	<div>
-						
+	<div  width="400" height="600">				
 	나는 당신을 사랑하고 당신의 행복을 사랑합니다.<br>
 	나는 온 세상 사람들이 당신을 사랑하고<br>
 	당신의 행복을 사랑하기를 바랍니다.<br><br>
