--- a/3월 4주차/3월 21일.MD
+++ b/3월 4주차/3월 21일.MD
@@ -127,4 +127,51 @@ CRUD 구현
 </body>
 </html>
 ```
+### href="경로지정"
+```html
+	1) 절대경로
+		; http://로 시작되는 웹사이트의 주소(url)를 사용해서 파일장소를 지정하는 방식
+		; hhtp://localhos:8080/프로젝트명/패키지명/파일명.hrml
 
+			루트계층		제1계층		제2계층 		제3계층
+			-----------------------------------------
+			index.html
+			aaa ------- A.html
+					|
+					--- A2.html
+					|
+					bbb ------ B.html
+							|
+							---ccc ----- C.html
+
+			ddd --- D.html
+
+
+	2) 상대경로
+		; 현재 파일로 부터 목적파일까지 상대적인 위치관계를 지정하는 방식
+
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>절대경로로 파일을 호출합니다.</h3>
+	<hr><br><br>
+
+	<ul>
+		<li><a href="http://localhost:8080/Ch02/path_절대경로/aaa/A.html"> A파일</a></li>
+		<li><a href="http://localhost:8080/Ch02/path_절대경로/aaa/bbb/B.html"> B파일</a></li>
+		<li><a href="http://localhost:8080/Ch02/path_절대경로/aaa/bbb/ccc/C.html"> C파일</a></li>
+		<br>
+		<br>
+		<li><a href="http://localhost:8080/Ch02/path_절대경로/aaa/A2.html"> A2파일</a></li>
+	</ul>
+
+</body>
+</html>		
+		
+		
+		
+```
