--- a/3월 4주차/3월 21일.MD
+++ b/3월 4주차/3월 21일.MD
@@ -175,3 +175,23 @@ CRUD 구현
 		
 		
 ```
+
+상하,동일 객체 이동 html
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h1>C파일입니다</h1>
+
+	<h3>페이지 이동</h3>
+	<ul>
+		<li><a href="../../A.html">A로 이동</a></li>
+		<li><a href="../B.html">B로 이동</a></li>
+	</ul>
+</body>
+</html>
+```
