--- a/3월 4주차/3월 22일.MD
+++ b/3월 4주차/3월 22일.MD
@@ -19,3 +19,82 @@ Meta태그
 - Datebase와 연결하기 위한 CRUD기능에 대한 화면을 포함 작성할것 정하기
 
 보통 오전에는 수업, 오후에는 실습을 할 예정 ( 유동적으로 )
+
+### 임시 이미지 사이트
+https://via.placeholder.com/150X200/ff0000
+
+### 랜덤 이미지
+```html
+<!DOCTYPE html>
+<!-- 
+	placeholder.com
+		- 웹 디자이너들을 위한 무료 이미지 자리표시자 서비스이다.
+		-
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<img src="https://via.placeholder.com/150X200/ff0000">
+	<img src="https://via.placeholder.com/250X150">
+	<img src="https://via.placeholder.com/500X100/123456">
+	<img src="https://via.placeholder.com/50X100/0f0">
+
+
+	<div style="background-image: 
+		url('https://source.unsplash.com/random/800x700');
+		width: 810px;height: 810px;">
+	</div>
+
+</body>
+</html>
+```
+
+### 하이퍼링크
+```html
+<!DOCTYPE html>
+<!-- 
+	하이퍼링크
+		<a href="URL | URL#name" target="윈도우" > 이동할위치 </a>
+
+			- target :
+				. _blank: 새창에 출력
+				. _self : 현재창에 출력
+				. _parent: 부모창에 출력
+				. _top: 최상위에 출력
+
+		. 이동
+			- 다른 페이지
+			- 같은 페이지의 특정위치
+			- 다른 페이지의 특정위치
+			- 사이트 이동
+		. 출력
+			- 내 자신에게 출력
+			- 부모에게 출력
+
+ -->
+
+<html>
+<head>
+<meta charset="UTF-8">
+<title>하이퍼링크추가</title>
+</head>
+<body>
+	<a href="https://www.naver.com/">네이버</a><br>
+	<a href="https://www.youtube.com" target="_blank">유튜브</a><br>
+	<a href="https:/www.daum.net" target="_blank"> 
+		<img src="./img/flower.jpg" width="50" height="50">
+		다음사이트로 이동</a>
+
+</body>
+</html>
+```
+
+
+
+
+
+
+
