--- a/3월 4주차/3월 22일.MD
+++ b/3월 4주차/3월 22일.MD
@@ -93,7 +93,28 @@ https://via.placeholder.com/150X200/ff0000
 ```
 
 
+### 표 이용 삽입하기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h1>표를 이용한 이미지 삽입하기</h1>
+	<hr>
 
+	<table border="10" align="center" cellspacing="20" bgcolor="lightgray">
+		<tr>
+			<td><img alt="" src="./img/flower.jpg" width="300" height="300"></td>
+			<td><img alt="" src="./img/nature.jpg" width="300" height="300"></td>
+			<td><img alt="" src="./img/flower.jpg" width="300" height="300"></td>
+		</tr>
+	</table>
+</body>
+</html>
+```
 
 
 
